# ivo

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  LICENSE  README copy.md  README.md  TODO  biome.json  bun.lockb  jsr.json  package-lock.json  package.json  tsconfig.json  tsdown.config.ts  tsup.config.ts  vitest.config.ts
.github/workflows/: bun-ci.yml  ci.yml  node-ci.yml  publish.yml  reusable-bun-ci.yml  reusable-node-ci.yml  tests.yml
docs/: CHANGELOG.md  api-error.md  changelog  philosophy.md
docs/schema/: definition.md  inheritance.md
docs/v-next/: CHANGELOG.md
docs/v0.0.1/: index.md  life-cycles.md
docs/v1.1.0/: index.md
docs/v1.3.0/: index.md  life-cycles.md
docs/v1.4.0/: index.md  life-cycles.md  validators.md
docs/v1.4.10/: CHANGELOG.md
docs/v1.4.11/: CHANGELOG.md
docs/v1.4.6/: CHANGELOG  api-error.md
docs/v1.4.7/: CHANGELOG  CHANGELOG.md
docs/v1.5.0/: CHANGELOG.md  index.md  life-cycles.md  schema-error.md  validators.md
docs/v1.5.1/: CHANGELOG.md
docs/v1.6.0/: index.md  (+2 more)
rust/: Cargo.toml
rust/lib/partial_derive/: Cargo.toml
rust/lib/partial_derive/src/: lib.rs
rust/src/: demo.rs  error.rs  lib.rs  main.rs  model.rs  traits.rs  types.rs  utils.rs  validators.rs
rust/src/schema/: core.rs  definition.rs  defs.rs  demo.rs  error.rs  mod.rs  model.rs  schema.rs  utils.rs
rust/src/schema/properties/: base.rs  constants.rs  dependents.rs  enumerated.rs  enums.rs  lax.rs  mod.rs  required.rs  virtuals.rs
src/: ApiError.js  Schema.ts  TODO.ts  index.ts  isEqual.ts  utils.ts  validate.ts  validators.ts
(+438 files in other folders)
