[package]
name = "ivo"
version = "0.0.1"
edition = "2021"
description = "The schema valitator that brings user stories to life, inspired by ivo on npm"
license-file = "../LICENSE"
keywords = ["schema", "validation"]
homepage = "https://github.com/kamtoeddy/ivo#readme"
repository = "https://github.com/kamtoeddy/ivo.git"

[dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
lazy_static = "1.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
partial_derive = { path = "./lib/partial_derive" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
